# orion

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  ORION_Grounding_Prompt.docx  ORION_Implementation_Plan.docx  README.md  cloudbuild.yaml  pyproject.toml
app/: .env.template  main.py
app/orion_orchestrator/: __init__.py  agent.py  tools.py
app/orion_orchestrator/.adk/: session.db
app/static/: index.html  landing.html
app/static/.adk/: session.db
app/static/js/: anatomy-3d.js  app.js  checklist-panel.js  clinical-panel.js  ct-viewer.js  log-panel.js  screenshare-agent.js  summary-panel.js
assets/: convert_ct.py  generate_3d_model.py
