[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion"
version = "0.1.0"
description = "Operating Room Intelligent Orchestration Node — voice-directed surgical co-pilot"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "google-cloud-storage>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
